[package]
name = "rust-concurent-patterns"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
crossbeam-channel = "0.5.14"
futures = "0.3.31"
kanal = { git = "https://github.com/fereidani/kanal.git", branch = "main"}
tokio = { version = "1.44.1", features = ["full"] }
